--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           
              <div class="bg-video">
                 <video id="background-video" autoplay loop muted>
-                <source src="images/gym-video.mp4" type="video/mp4">
+                <source src="gym-video.mp4" type="video/mp4">
                 your browser not supportd
                   </video>
 
