--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
  <div class="choose_program_content">
 <h4>CHOOSE <span class="spancolor">PROGRAM</span></h4>
-<img src="images/line-dec.png"/>
+<img src="line-dec.png"/>
 <p>Training Studio is free CSS template for gyms and fitness centers. You are allowed to use this layout for your business website.
 </p>
 
@@ -87,7 +87,7 @@
 
  <div class="choose_program_content">
 <h4>Our<span class="spancolor"> Classes</span></h4>
-<img src="images/line-dec.png"/>
+<img src="line-dec.png"/>
 <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.
 </p>
 
@@ -100,7 +100,7 @@
   <div class="classes_schedule_content">
    <div class="classes_top">
    <h3>Our<span class="spancolor"> Classes</span></h3>
-<img src="images/line-dec.png"/>
+<img src="line-dec.png"/>
 <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.
 </p>
    </div>
@@ -156,7 +156,7 @@
 
  <div class="choose_program_content">
 <h4>expert<span class="spancolor"> trainer</span></h4>
-<img src="images/line-dec.png"/>
+<img src="line-dec.png"/>
 <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.
 </p>
 
@@ -167,7 +167,7 @@
 <div class="mainbox">
  <div class="innerbox">
    <div class="box box1">
-     <img src="./images/first-trainer.jpg" alt="">
+     <img src="first-trainer.jpg" alt="">
 	 <h5>Strength Trainer</h5>
 	 <h3>Bret D. Bowers</h3>
 	 <p>Bitters cliche tattooed 8-bit distillery mustache. Keytar succulents gluten-free vegan church-key pour-over seitan flannel.
@@ -180,7 +180,7 @@
 	 </div>
    </div>
    <div class="box box2">
-   <img src="./images/second-trainer.jpg" alt="">
+   <img src="second-trainer.jpg" alt="">
 	 <h5>Muscle Trainer</h5>
 	 <h3>Hector T. Daigl</h3>
 	 <p>Bitters cliche tattooed 8-bit distillery mustache. Keytar succulents gluten-free vegan church-key pour-over seitan flannel.
@@ -193,7 +193,7 @@
 	 </div>
    </div>
    <div class="box box3">
-   <img src="./images/third-trainer.jpg" alt="">
+   <img src="third-trainer.jpg" alt="">
 	 <h5>Power Trainer</h5>
 	 <h3>Paul D. Newman</h3>
 	 <p>Bitters cliche tattooed 8-bit distillery mustache. Keytar succulents gluten-free vegan church-key pour-over seitan flannel.
